--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <marquee>WE JUST REALLY LIEK FROGS</marquee>
-<a href="blog.heqetlabs.com">blag</a>
+<a href="http://blog.heqetlabs.com">blag</a>
 </body>
 </html>
 
